--- a/res/layout/activity_makr.xml
+++ b/res/layout/activity_makr.xml
@@ -76,8 +76,29 @@
         android:id="@+id/seekBar1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/pushbuttonTextView"
-        android:layout_marginTop="55dp" />
+        android:layout_alignLeft="@+id/f1"
+        android:layout_alignTop="@+id/f1"
+        android:layout_marginTop="44dp" />
+
+    <EditText
+        android:id="@+id/editText1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/f1"
+        android:layout_below="@+id/seekBar1"
+        android:layout_marginTop="35dp"
+        android:ems="10" >
+
+        <requestFocus />
+    </EditText>
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/f1"
+        android:layout_alignTop="@+id/editText1"
+        android:layout_toRightOf="@+id/editText1"
+        android:text="Send(TX)" />
 
 </RelativeLayout>
