--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,9 +2,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/mwmblue"
     android:orientation="vertical"
     android:padding="0dp"
     tools:context=".ActivityMAKr" >
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/makewithmotologo" />
 
     <LinearLayout
         android:id="@+id/linearLayout1"
@@ -12,7 +19,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="22dp"
         android:background="#44ffffff"
         android:orientation="vertical"
         android:padding="5dp" >
@@ -50,28 +56,25 @@
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/linearLayout1"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="12dp"
         android:orientation="vertical"
         android:padding="15dp" >
 
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Welcome"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:typeface="sans" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/textView1"
             android:layout_marginTop="23dp"
-            android:text="Select your board to see the example. \n\nTweaking the MainActivity.java in the sourcecode will let you start directly with your prefered board."
+            android:background="@drawable/grey_rounded_rect"
+            android:padding="15dp"
+            android:text="Select your board to see the example. \n\nTweaking the MainActivity.java in the source code will let you start directly with your preferred board."
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textStyle="bold"
             android:typeface="normal" />
