--- a/res/layout/activity_makr.xml
+++ b/res/layout/activity_makr.xml
@@ -50,6 +50,7 @@
         android:layout_height="102dp"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/radioGroup"
+        android:padding="5dp"
          />
 
     <FrameLayout
@@ -62,22 +63,7 @@
 
     </FrameLayout>
 
-    <TextView
-        android:id="@+id/pushbuttonTextView"
-        android:layout_width="252dp"
-        android:layout_height="145dp"
-        android:layout_alignBottom="@+id/f1"
-        android:layout_alignLeft="@+id/f1"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/f1"
-        android:text="@string/pushbuttonstring" />
 
-    <SeekBar
-        android:id="@+id/seekBar1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/pushbuttonTextView"
-        android:layout_marginTop="55dp" />
+
 
 </RelativeLayout>
