--- a/res/layout/view_textview_receive.xml
+++ b/res/layout/view_textview_receive.xml
@@ -5,14 +5,15 @@
 
     <TextView
         android:id="@+id/content"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#ffbbbbbb"
+        android:layout_margin="1dp"
+        android:background="@drawable/blue_rounded_rect"
         android:gravity="left"
         android:padding="5dp"
-        android:text="qq"
+        android:text="left message"
+        android:textColor="@color/black"
         android:textSize="10sp" >
-
     </TextView>
 
 </LinearLayout>
