--- a/res/layout/view_textview_send.xml
+++ b/res/layout/view_textview_send.xml
@@ -7,10 +7,11 @@
         android:id="@+id/content"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="#ff00bbbb"
+        android:background="@drawable/magenta_rounded_rect"
         android:gravity="right"
+        android:layout_margin="1dp"
         android:padding="5dp"
-        android:text="qq"
+        android:text="right_message"
         android:textSize="10sp" >
     </TextView>
 
