--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -15,6 +15,13 @@
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+    </style>
+    
+     <!-- Application theme. -->
+    <style name="BTTheme" parent="android:style/Theme.Holo.Dialog">
+		<item name="android:background">@drawable/blue_rounded_rect</item>
+		<item name="android:padding">2dp</item>
+		<item name="android:textColor">@color/white</item>
     </style>
 
 </resources>
