--- a/res/layout/activity_bt.xml
+++ b/res/layout/activity_bt.xml
@@ -56,7 +56,7 @@
            android:layout_alignParentTop="true" />
     -->
 
-    <com.makewithmoto.makr.views.PlotView
+    <com.makewithmoto.views.PlotView
         android:id="@+id/plotView1"
         android:layout_width="wrap_content"
         android:layout_height="102dp"
